@@ -6,7 +6,7 @@
 
   <groupId>com.nablarch.framework</groupId>
   <artifactId>nablarch-etl</artifactId>
-  <version>1.2.4</version>
+  <version>1.2.5</version>
   
   <scm>
     <connection>scm:git:git://github.com/nablarch/${project.artifactId}.git</connection>
@@ -17,7 +17,7 @@
   <parent>
     <groupId>com.nablarch</groupId>
     <artifactId>nablarch-parent</artifactId>
-    <version>5u19</version>
+    <version>5u22</version>
   </parent>
   
   <properties>
@@ -50,6 +50,18 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>java17</id>
+      <properties>
+        <junit.additionalArgLine>
+          --add-opens java.base/java.lang=ALL-UNNAMED
+          --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+          --add-opens java.base/java.io=ALL-UNNAMED
+          --add-opens java.base/java.security=ALL-UNNAMED
+          --add-opens java.base/java.util=ALL-UNNAMED
+        </junit.additionalArgLine>
+      </properties>
     </profile>
   </profiles>
 
@@ -98,7 +110,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.10.5.1</version>
+      <version>2.12.7.1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
